<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="facebook_app_id">902713349795515</string>


    <string name="app_name">DroozoApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="powered_by_droozo">POWERED BY DROOZO</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="skip">SKIP</string>
    <string name="please_select_type">PLEASE SELECT TYPE</string>
    <string name="consumer">CONSUMER</string>
    <string name="service_provider">SERVICE PROVIDER</string>
    <string name="cancel">CANCEL</string>
    <string name="facebook">Facebook</string>
    <string name="google_plus">Google Plus</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="new_user_">"New User? "</string>
    <string name="take_from_camera">TAKE FROM CAMERA</string>
    <string name="choose_from_gallery">CHOOSE FROM GALLERY</string>
    <string name="welcome">WELCOME</string>
    <string name="search_health_provider">Search Health Providers</string>
    <string name="health_mart">Health Mart</string>
    <string name="droofit_droohealth_apps">Droofit / DrooHealth Apps</string>
    <string name="attach_photo_to_upload">Attach photo to Upload</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_appointment">My Appointment</string>
    <string name="nav_item_myTransaction">My Transaction</string>
    <string name="nav_item_refer_frd">Refer a Friend</string>
    <string name="nav_item_contact_us">Contact Us</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_signout">Logout</string>
    <string name="personal_details">Personal Details</string>
    <string name="gender">Gender</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="dob">Date of Birth</string>
    <string name="country">Country</string>
    <string name="postal_code">Postal Code</string>
    <string name="search_by_name_or_cat">Search by Name or Category</string>
    <string name="search_by_loc">Search by Location</string>
    <string name="search_health_providers">SEARCH HEALTH PROVIDERS</string>
    <string name="doctors">Doctors</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="ambulance">Ambulance</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="done">DONE</string>
    <string name="book_appointment">BOOK APPOINTMENT</string>
    <string name="forgot_password">FORGOT PASSWORD</string>


    <!-- navigation drawer item labels -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_appointment</item>
        <item>@string/nav_item_myTransaction</item>
        <item>@string/nav_item_refer_frd</item>
        <item>@string/nav_item_contact_us</item>
        <item>@string/nav_item_settings</item>
        <item>@string/nav_item_signout</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="search_by_city">Seach by City</string>
    <string name="reference">Reference</string>
    <string name="condition">Condition</string>
    <string name="data_sheet">Data Sheet</string>
    <string name="weight">Weight</string>
    <string name="serving_size">Serving Size</string>
    <string name="form">Form</string>
    <string name="delivery_info">Delivery Information</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="sub_total">Sub Total</string>
    <string name="discount">Discount (-)</string>
    <string name="texes">Texes (+)</string>
    <string name="shipping_charge">Shipping Charge (+)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="com_facebook_loginview_log_in_button">Facebook</string>
    <string name="com_facebook_loginview_log_out_button">Your Logout</string>


</resources>