<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/llcamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_ll"
        android:gravity="center_vertical"
        android:orientation="vertical" >

         <TextView
                android:id="@+id/txtCamera"
                style="@style/grey_popup_normal_14dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/take_from_camera" />

        <LinearLayout
            android:id="@+id/llGallery"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/light_color" />

            <TextView
                android:id="@+id/txtGallery"
                style="@style/grey_popup_normal_14dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/choose_from_gallery" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/light_color" />

            <TextView
                android:id="@+id/txtCancel"
                style="@style/green_popup_normal_14dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>