<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_bg"
    tools:context="org.droozo.activity.SplashActivity">

    <TextView
        android:id="@+id/signInUpSkiptxt"
        style="@style/white_text_normal_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:text="@string/skip" />

    <ImageView
        android:id="@+id/splashCenterImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingBottom="40dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/llSignin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.48"
            android:background="@drawable/selector_btn_for_grey"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtlogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:background="@android:color/transparent" />

        <LinearLayout
            android:id="@+id/llSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.48"
            android:background="@drawable/selector_btn_for_white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtregister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/sign_up"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>