<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"></include>

    <com.android.droozo.util.SelectedLinearLayout
        android:id="@+id/llHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="10dp"
        android:background="@drawable/round_corner_circle_ll"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search_health_doctor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctors"
                android:textColor="@color/white"
                android:textSize="12dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDiagnostic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search_health_diagnostic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diagnostic"
                android:textColor="@color/white"
                android:textSize="12dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAmbulance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search_health_ambulance" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ambulance"
                android:textColor="@color/white"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPharmacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search_health_pharmacy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pharmacy"
                android:textColor="@color/white"
                android:textSize="12dp" />

        </LinearLayout>
    </com.android.droozo.util.SelectedLinearLayout>


    <LinearLayout
        android:id="@+id/llGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <GridView
            android:id="@+id/grid"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:columnWidth="100dp"
            android:gravity="center"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth" />

    </LinearLayout>


</LinearLayout>

