<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navigatiobBarBG">

    <include
        android:id="@+id/llToolbar"
        layout="@layout/toolbar_login"></include>


    <LinearLayout
        android:id="@+id/nav_header_container"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_below="@+id/llToolbar"
        android:background="@drawable/banner_bg"
        android:gravity="center"
        android:orientation="vertical">

        <com.exigency.exigencycare.util.CircleImageView
            android:id="@+id/imgUserDrawer"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:paddingTop="20dp"
            app:border_color="@color/light_color"
            app:border_width="1dp" />

        <TextView
            android:id="@+id/txtEmailDrawer"
            style="@style/white_normal_14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="xyz@gmail.com" />

    </LinearLayout>

    <ScrollView

        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nav_header_container">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/grey_popup_normal_15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nav_header_container"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:text="@string/personal_details" />


            <include
                android:id="@+id/include1"
                layout="@layout/line_complete"></include>


            <LinearLayout
                android:id="@+id/drawerList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/include1"
                android:background="@color/white"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/black_popup_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:text="First Name" />

                    <TextView
                        android:id="@+id/txtFirstName"
                        style="@style/grey_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:text="-" />
                </RelativeLayout>

                <include layout="@layout/line_15dp_left"></include>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/black_popup_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:text="Last Name" />

                    <TextView
                        android:id="@+id/txtLastName"
                        style="@style/grey_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:text="-" />
                </RelativeLayout>


                <include layout="@layout/line_15dp_left"></include>


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        style="@style/black_popup_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:text="@string/gender" />

                    <TextView
                        android:id="@+id/txtGender"
                        style="@style/grey_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:text="-" />
                </RelativeLayout>


                <!-- <include layout="@layout/line_15dp_left"></include>-->

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/black_popup_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:text="@string/mobile_number" />

                    <TextView
                        android:id="@+id/txtPhone"
                        style="@style/grey_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:text="-" />
                </RelativeLayout>


                <!-- <include layout="@layout/line_15dp_left"></include>-->


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        style="@style/black_popup_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:text="@string/dob" />

                    <TextView
                        android:id="@+id/txtDOB"
                        style="@style/grey_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:text="-" />
                </RelativeLayout>


            </LinearLayout>


            <!--<include
                android:id="@+id/include1"
                layout="@layout/line_complete"></include>-->


            <TextView
                style="@style/grey_popup_normal_15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nav_header_container"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:text="@string/address"
                android:visibility="gone" />

            <include
                android:id="@+id/include2"
                layout="@layout/line_complete"></include>


            <LinearLayout
                android:id="@+id/drawerList2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/include2"
                android:background="@color/white"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/black_popup_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:text="@string/address" />

                    <TextView
                        android:id="@+id/txtAddress"
                        style="@style/grey_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:text="125/523, XYZ Coloney, USA" />
                </RelativeLayout>


                <include layout="@layout/line_15dp_left"></include>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/black_popup_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:text="@string/city" />

                    <TextView
                        android:id="@+id/txtCity"
                        style="@style/grey_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:text="Chicago" />
                </RelativeLayout>


                <include layout="@layout/line_15dp_left"></include>


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/black_popup_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:text="@string/country" />

                    <TextView
                        android:id="@+id/txtCountry"
                        style="@style/grey_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:text="USA" />
                </RelativeLayout>


                <include layout="@layout/line_15dp_left"></include>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/black_popup_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:text="@string/postal_code" />

                    <TextView
                        android:id="@+id/txtCode"
                        style="@style/grey_normal_14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:text="3002004" />
                </RelativeLayout>
            </LinearLayout>

            <include layout="@layout/line_complete"></include>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>